tests/semantic/ifstmt_err2.expected

Semantic Error [line 6]: value: "sc1_test"
	Invalid conditional type: Expected type(s) 'Boolean'; found 'String' instead.
