tests/semantic/ifstmt_err2.mtp
(*Test if condition with non-Boolean value*)
const test := 'error';
var a, b: integer;

begin
	if test then
	   write('Hello')
	;
end.